--- a/equipo.html
+++ b/equipo.html
@@ -191,74 +191,103 @@
  
 <!-- HERO EQUIPO -->
 <section class="page-hero" style="
-  background:#AAD4F1;
-  height:120px;
+  background-image:url('assets/img/hero-equipo.png');
+  background-size:cover;
+  background-position:center;
+  height:110px;
   display:flex;
   align-items:center;
-  justify-content:center;">
-  <h2 style="color:#0D3B66; font-size:34px; margin:0;">Nuestro Equipo</h2>
+  justify-content:center;
+  color:#fff;">
+  <h2 style="font-size:28px; font-weight:700; margin:0;">Nuestro Equipo</h2>
 </section>
 
-<!-- EQUIPO CARDS -->
 <section class="container my-5">
-  <div class="row">
-    <div class="col-12 mb-4">
-      <h3 style="color:#0D3B66;">Conozca a nuestro equipo de trabajo</h3>
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+
+    <!-- Card 1 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo1.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Luis Carlos Pimienta Henao</h5>
+            <p style="margin:0;">Gerente</p>
+            <p style="margin:0;">Abogado, Especialista Derecho Laboral / Ingeniero de Sistemas</p>
+          </div>
+        </div>
+      </a>
     </div>
-  </div>
 
-  <div class="cards">
+    <!-- Card 2 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo2.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Paola Patricia Tovar Ariza</h5>
+            <p style="margin:0;">Sub Gerente</p>
+            <p style="margin:0;">Administradora de Empresas</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
-    <!-- CARD 1 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/luiscarlos.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Luis Carlos Pimienta Henao</h3>
-      <p>Gerente</p>
-      <p>Abogado, Especialista Derecho Laboral / Ingeniero de Sistemas</p>
-    </a>
+    <!-- Card 3 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo3.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Nombre</h5>
+            <p style="margin:0;">Profesión</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
-    <!-- CARD 2 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/paola.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Paola Patricia Tovar Ariza</h3>
-      <p>Sub Gerente</p>
-      <p>Administradora de Empresas</p>
-    </a>
+    <!-- Card 4 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo4.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Nombre</h5>
+            <p style="margin:0;">Profesión</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
-    <!-- CARD 3 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/placeholder.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Nombre</h3>
-      <p>Cargo</p>
-      <p>Profesión</p>
-    </a>
+    <!-- Card 5 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo5.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Nombre</h5>
+            <p style="margin:0;">Profesión</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
-    <!-- CARD 4 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/placeholder.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Nombre</h3>
-      <p>Cargo</p>
-      <p>Profesión</p>
-    </a>
-
-    <!-- CARD 5 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/placeholder.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Nombre</h3>
-      <p>Cargo</p>
-      <p>Profesión</p>
-    </a>
-
-    <!-- CARD 6 -->
-    <a href="miembro.html" class="service-card" style="background:#AAD4F1; text-align:center;">
-      <img src="assets/img/equipo/placeholder.jpg" style="width:100%; border-radius:6px 6px 0 0;">
-      <h3>Nombre</h3>
-      <p>Cargo</p>
-      <p>Profesión</p>
-    </a>
+    <!-- Card 6 -->
+    <div class="col">
+      <a href="perfil-miembro.html" style="text-decoration:none;">
+        <div class="card h-100" style="background:#AAD4F1; border:none;">
+          <img src="assets/img/equipo6.png" class="card-img-top" alt="Foto">
+          <div class="card-body text-center">
+            <h5 class="card-title" style="font-weight:700;">Nombre</h5>
+            <p style="margin:0;">Profesión</p>
+          </div>
+        </div>
+      </a>
+    </div>
 
   </div>
 </section>
+
 
 
 
